# CRM-system

./: .gitignore  .gitmodules  README.md  docker-compose.dev.yml  pytest.ini  requirements.txt  test.yaml
dct/: Makefile  main.py  pyproject.toml
dct/apps/api/serializers/: CarSerializer.py  OrderSerializer.py  UserSerializer.py  WorkSerializer.py
dct/apps/api/tests/: factories.py
dct/apps/api/urls/: car_urls.py  common.py  order_urls.py  user_urls.py  work_urls.py  workstatus_urls.py
dct/apps/api/views/: car_views.py  order_views.py  user_views.py  work_views.py  workstatus_views.py
dct/apps/car/: apps.py  forms.py  tests.py
dct/apps/car/migrations/: 0001_initial.py  0002_alter_car_owner.py  0003_alter_car_owner.py  0005_alter_car_year.py  0009_alter_car_year.py  0013_alter_car_mark_alter_car_model_alter_car_vin.py
dct/apps/car/models/: CarModel.py
dct/apps/car/services/: VINDecoder.py
dct/apps/car/urls/: common.py
dct/apps/car/views/: add_car.py
dct/apps/core/: tests.py
dct/apps/core/migrations/: 0001_initial.py  0002_user_phone_number_user_role_user_tg_login.py  0003_alter_user_phone_number.py
dct/apps/core/models/: UserModel.py
dct/apps/order/: apps.py  signals.py  tasks.py  tests.py
dct/apps/order/migrations/: 0005_alter_order_worker.py  0006_alter_order_owner_alter_order_worker.py  0007_alter_order_car_alter_order_owner_alter_order_worker.py  (+6 more)
dct/apps/work/: apps.py
dct/apps/workstatus/: apps.py  signals.py  tests.py
dct/config/: celery.py
dct/config/settings/: common.py
dct/config/urls/: common.py
dct/requirements/: common.txt
(+295 files in other folders)
